<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch" />

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSend" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_print" />

    <Button
        android:id="@+id/btnDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDis" />
</LinearLayout>
