<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pairedDevices"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="true"
        android:stackFromBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/otherDevice"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:textColor="@color/niceBlue" />

</LinearLayout>